# commonstrings

./: .gitignore  README.md  common_multiple_strings.pyx  commonstrings.pyx  package.json  pyproject.toml  setup.py  tea.yaml
common_multiple_strings/: common_multiple_strings.h
common_multiple_strings/auxiliary/: alphabet.cpp
python/: test_python.py
